--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,11 @@
+Changes since 4.2-BETA1 
+-------------------
+
+* [HTTPCORE-289] HttpAsyncService fails to invoke Cancellable#cancel() when the ongoing HTTP 
+  exchange is aborted by the client. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+
 Release 4.2-BETA1
 -------------------
 
