--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,18 @@
-Changes since 4.2-BETA1 
+Release 4.2
+-------------------
+
+This is the first stable (GA) release of HttpCore 4.2. The most notable features included in this 
+release are connection pool components for blocking and non-blocking HTTP connections and new 
+asynchronous client and server side protocol handlers.
+
+New protocol handling API used in conjunction with connection pooling components is expected to 
+make development of asynchronous HTTP client agents and HTTP proxies easier and less error prone.
+
+Connection pool components are based on mature code migrated from HttpClient and HttpAsyncClient 
+modules but have a slightly different API that makes a better use of Java standard concurrent 
+primitives. 
+
+Changelog
 -------------------
 
 * AbstractHttpClientConnection#isResponseAvailable method now catches SocketTimeoutException
@@ -41,6 +55,9 @@ Release 4.1.4
 
 This is a maintenance release that fixes a number of bugs found since 4.1.3. It is also likely 
 to be the last release in the 4.1.x branch.
+
+Changelog
+-------------------
 
 * [HTTPCORE-286] Canceled I/O session can cause an IllegalStateException in BaseIOReactor#validate
   leading to an abnormal termination of the I/O reactor.
@@ -92,7 +109,8 @@ Java 1.3. As of this release HttpCore requires Java 1.5 for all its components. 
 methods deprecated between versions 4.0-beta1 and 4.0 GA (more than two years ago) have been 
 removed in this release.
 
-Bug fixes:
+Changelog
+-------------------
 
 * [HTTPCORE-270] Fixed IllegalStateException in AbstractSessionOutputBuffer and 
   AbstractSessionInputBuffer.
@@ -120,7 +138,8 @@ Java 1.3. As of this release HttpCore requires Java 1.5 for all its components. 
 methods deprecated between versions 4.0-beta1 and 4.0 GA (more than two years ago) have been 
 removed in this release.
 
-Bug fixes:
+Changelog
+-------------------
 
 * [HTTPCORE-268] Handle runtime exceptions thrown by SSLEngine.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
@@ -195,15 +214,8 @@ with JREs that have a naive (broken) implementation of SelectionKey API and also
 compatibility with the Google Android platform. There has also been a number of performance
 related improvements and bug fixes in both blocking and non-blocking components.
 
-All upstream projects are encouraged to upgrade.
-
-HttpCore is a set of low level HTTP transport components that can be used to build custom
-client and server side HTTP services with a minimal footprint. HttpCore supports two I/O
-models: blocking I/O model based on the classic Java I/O and non-blocking, event driven I/O
-model based on Java NIO.  The blocking I/O model may be more appropriate for data intensive,
-low latency scenarios, whereas the non-blocking model may be more appropriate for high latency
-scenarios where raw data throughput is less important than the ability to handle thousands of
-simultaneous HTTP connections in a resource efficient manner.
+Changelog
+-------------------
 
 * [HTTPCORE-240]: DefaultConnectingIOReactor leaks a socket descriptor if the session request fails.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
