Fixed HttpAsyncRequestExecutor incorrect execution of message exchanges that span across multiple hosts (for instance, in case of a request redirect)
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1331596 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -15,6 +15,10 @@ primitives.
 Changelog
 -------------------
 
+* Fixed HttpAsyncRequestExecutor incorrect execution of message exchanges that span across multiple 
+  hosts (for instance, in case of a request redirect).  
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * AbstractHttpClientConnection#isResponseAvailable method now catches SocketTimeoutException
   and returns false.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
