--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,9 @@
+Changes since 4.2
+-------------------
+
+* Fixed NPE in StringEntity constructor thrown if ContentType#getCharset is null.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 Release 4.2
 -------------------
 
