HTTPCORE-298: Fixed non-blocking SSLIOSession state can getting out of sync with the underlying IOSession in case the I/O session is terminated by the I/O reactor rather than by the protocol handler Contributed by Sandeep Tamhankar <sandman at electric-cloud.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1334618 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,11 @@
 Changes since 4.2
 -------------------
 
+* [HTTPCORE-298] Fixed non-blocking SSLIOSession state can getting out of sync with the underlying
+  IOSession in case the I/O session is terminated by the I/O reactor rather than by the protocol
+  handler. 
+  Contributed by Sandeep Tamhankar <sandman at electric-cloud.com>
+
 * Fixed NPE in StringEntity constructor thrown if ContentType#getCharset is null.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
