--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.2
 -------------------
 
+* [HTTPCORE-263] Under rare circumstances incorrectly delineated or garbled HTTP message
+  can cause an IndexOutOfBoundsException in AbstractSessionInputBuffer#readLine()
+  Contributed by Michael Pujos <bubbleguuum at free.fr> 
+
 * Made connection pools use FIFO algorithm instead of LIFO when leasing / releasing persistent
   connections.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
