--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,9 @@
+Changes since 4.2.1
+
+* [HTTPCORE-303] ContentType made Serializable. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+
 Release 4.2.1
 -------------------
 
