--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,11 +1,17 @@
 Release 4.2.2
 -------------------
 
-This is a maintenance release that fixes a number of bugs and regressions found since 4.2.1. 
-Users of HttpCore 4.2 are encouraged to upgrade.
+This is a maintenance release that fixes a number of bugs and regressions found since 4.2.1
+including a major bug in NIO module causing incorrectly handling of outgoing Content-Length
+delimited messages larger than 2GB.
+
+Users of HttpCore 4.2 are advised to upgrade.
 
 Changelog
 -------------------
+
+* [HTTPCORE-312] NIO length delimited content encoder incorrectly handles messages larger than 2GB.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 * [HTTPCORE-310] Fixed regression in DefaultConnectionReuseStrategy causing it to incorrectly 
   flag connections as non-reusable after a 204, 205 or 304 response. 
