Fixed grammar mistakes in release notes
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.2.x@1386856 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -2,7 +2,7 @@ Release 4.2.2
 -------------------
 
 This is a maintenance release that fixes a number of bugs and regressions found since 4.2.1
-including a major bug in NIO module causing incorrectly handling of outgoing Content-Length
+including a major bug in the NIO module causing incorrect handling of outgoing Content-Length
 delimited messages larger than 2GB.
 
 Users of HttpCore 4.2 are advised to upgrade.
