HTTPCORE-313: ContentType#parse to ignore empty and blank charset attributes; HttpEntityUtils#toString to throw checked I/O exception if it encounters an unsupported charset
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1388164 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.2.1
 
+* [HTTPCORE-313] ContentType#parse now ignores empty and blank charset attributes. 
+  HttpEntityUtils#toString now throws checked I/O exception ifit  encounters an unsupported charset. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-312] NIO length delimited content encoder incorrectly handles messages larger than 2GB.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
