HTTPCORE-313: ContentType#parse to ignore empty charset attributes; HttpEntityUtils#toString to throw checked I/O exception if it encounters an unsupported charset
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.2.x@1388169 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,10 @@
+Changes since Release 4.2.2
+
+* [HTTPCORE-313] ContentType#parse now ignores empty attributes. HttpEntityUtils#toString now 
+  throws checked I/O exception if it  encounters an unsupported charset. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+
 Release 4.2.2
 -------------------
 
