HTTPCORE-315: AbstractNIOConnPool fails to correctly deallocate connection if it is immediately released from the session request callback causing a resource leak Contributed by Scott Stanton <snstanton at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.2.x@1393510 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,9 @@
 Changes since Release 4.2.2
+=======
+
+* [HTTPCORE-315] AbstractNIOConnPool fails to correctly deallocate connection if it is immediately 
+  released from the session request callback causing a resource leak.
+  Contributed by Scott Stanton <snstanton at gmail.com> 
 
 * [HTTPCORE-313] ContentType#parse now ignores empty attributes. HttpEntityUtils#toString now 
   throws checked I/O exception if it  encounters an unsupported charset. 
