HTTPCORE-316: HeaderGroup#clone removes headers from the original object Contributed by Markus Thies <markus at dr-thies.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1398061 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes in trunk
 
+* [HTTPCORE-316] HeaderGroup#clone removes headers from the original object.
+  Contributed by Markus Thies <markus at dr-thies.com> 
+
 * [HTTPCORE-315] AbstractNIOConnPool fails to correctly deallocate connection if it is immediately 
   released from the session request callback causing a resource leak.
   Contributed by Scott Stanton <snstanton at gmail.com> 
