--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,11 @@
 Changes since Release 4.2.2
 =======
 
+* [HTTPCORE-319, HTTPCORE-322] Non-blocking SSLIOSession can enter an infinite loop under 
+  special circumstances when the remote peer terminates the session in the middle of SSL handshake.
+  Contributed by Paul Donohue <apache-jira at PaulSD.com> and 
+  Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-316] HeaderGroup#clone removes headers from the original object.
   Contributed by Markus Thies <markus at dr-thies.com> 
 
@@ -16,7 +21,8 @@ Changes since Release 4.2.2
   Contributed by Scott Stanton <snstanton at gmail.com> 
 
 * [HTTPCORE-313] ContentType#parse now ignores empty and blank charset attributes. 
-  HttpEntityUtils#toString now throws checked I/O exception ifit  encounters an unsupported charset. 
+  HttpEntityUtils#toString now throws checked I/O exception if it  encounters an unsupported 
+  charset. 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 
