HTTPCORE-319, HTTPCORE-322: Non-blocking SSLIOSession can enter an infinite loop under special circumstances when the remote peer terminates the session in the middle of SSL handshake Contributed by Paul Donohue <apache-jira at PaulSD.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1412459 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,10 @@
 Changes in trunk
 
+* [HTTPCORE-319, HTTPCORE-322] Non-blocking SSLIOSession can enter an infinite loop under 
+  special circumstances when the remote peer terminates the session in the middle of SSL handshake.
+  Contributed by Paul Donohue <apache-jira at PaulSD.com> and 
+  Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-316] HeaderGroup#clone removes headers from the original object.
   Contributed by Markus Thies <markus at dr-thies.com> 
 
@@ -8,7 +13,8 @@ Changes in trunk
   Contributed by Scott Stanton <snstanton at gmail.com> 
 
 * [HTTPCORE-313] ContentType#parse now ignores empty and blank charset attributes. 
-  HttpEntityUtils#toString now throws checked I/O exception ifit  encounters an unsupported charset. 
+  HttpEntityUtils#toString now throws checked I/O exception if it  encounters an unsupported 
+  charset. 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 * [HTTPCORE-312] NIO length delimited content encoder incorrectly handles messages larger than 2GB.
