--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,12 +1,12 @@
 Release 4.2.3
 -------------------
 
-This is a maintenance release that fixes a number of bugs found since 4.2.2 including 
+This maintenance release fixes a number of bugs found since 4.2.2 including 
 a major bug in the NIO module that can cause an infinite loop in SSL sessions under special 
 circumstances when the remote peer terminates the session in the middle of SSL handshake.
 Please note this issue does not affect blocking I/O components used by HttpClient.
 
-Users of HttpCore NIO of all versions are advised to upgrade.
+We advise users of HttpCore NIO of all versions to upgrade.
 
 Changelog
 -------------------
