HTTPCORE-331: BasicFuture no longer executes notification callbacks inside a synchronized block
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1435143 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.3-ALPHA1 
 -------------------
 
+* [HTTPCORE-331] BasicFuture no longer executes notification callbacks inside a synchronized block.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-330] Clarify InputStreamEntity length constructor argument.
   Contributed by John McCarthy <jmsignup at gmail.com>
 
