--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -10,6 +10,11 @@ Changes since 4.3-ALPHA1
 * [HTTPCORE-323] Undocumented UnsupportedCharsetException in ContentType#getOrDefault.
   Contributed by Gary D. Gregory <ggregory at apache.org>
 
+* [HTTPCORE-319] Non-blocking SSLIOSession can fail to shut down correctly when the underlying
+  connection gets terminated abnormally by the opposite endpoint in case there is a truncated or
+  corrupted encrypted content in the input buffer and there is still data in the output buffer
+  that needs to be flushed out (most likely to occur with POST or PUT requests).
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 
 Release 4.3-ALPHA1 
