HTTPCORE-334: https request to a non-responsive but alive port results in a busy loop in one of I/O dispatch threads Contributed by Scott Stanton <snstanton at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.2.x@1448439 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.2.3
 
+* [HTTPCORE-334] https request to a non-responsive but alive port results in a busy loop 
+  in one of I/O dispatch threads. 
+  Contributed by Scott Stanton <snstanton at gmail.com> 
+
 * [HTTPCORE-331] BasicFuture no longer executes notification callbacks inside a synchronized block.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
