--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -5,6 +5,10 @@ Changes since 4.3-ALPHA1
   codecs.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
+* [HTTPCORE-334] https request to a non-responsive but alive port results in a busy loop 
+  in one of I/O dispatch threads. 
+  Contributed by Scott Stanton <snstanton at gmail.com> 
+
 * [HTTPCORE-331] BasicFuture no longer executes notification callbacks inside a synchronized block.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
