--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,4 @@
-Release 4.3-ALPHA1 
+Release 4.3-BETA1 
 -------------------
 
 This is the first BETA release from the 4.3.x release branch. The main theme of the 4.3 release
@@ -29,7 +29,7 @@ Changelog
 
 
 
-Release 4.3-ALPHA1 
+Release 4.3-BETA1 
 -------------------
 
 This is the first release from the 4.3.x release branch. The main theme of the 4.3 release
