HTTPCORE-336: Unhandled CancelledKeyException leads to a shutdown of the underlying IOReactor Contributed by Thomas Dudek <mail.dudek at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1463610 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,10 @@
+Changes since Release 4.3-BETA1
+-------------------
+
+* [HTTPCORE-336]  Unhandled CancelledKeyException leads to a shutdown of the underlying IOReactor.
+  Contributed by Thomas Dudek <mail.dudek at gmail.com> 
+
+
 Release 4.3-BETA1 
 -------------------
 
