Non-blocking connection pool to avoid scanning the entire queue of pending connection requests on each connection lease / release operation (under heavy load the request queue can contain a significant number of pending requests, a full linear scan of which can cause massive performance degradation)
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.2.x@1478038 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,15 @@
 Changes since Release 4.2.4
 -------------------
 
+* Non-blocking connection pool to avoid scanning the entire queue of pending connection requests 
+  on each connection lease / release operation (under heavy load the request queue can contain 
+  a significant number of pending requests, a full linear scan of which can cause massive 
+  performance degradation).
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+* Use bulk ByteBuffer#put method instead of single byte ByteBuffer#put
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-336]  Unhandled CancelledKeyException leads to a shutdown of the underlying IOReactor.
   Contributed by Thomas Dudek <mail.dudek at gmail.com> 
 
